feat(assignment): 任务分配模块 PR1 + 工具卡单条同步 + F5 通知分发修复
桌面端 (Tool 库)
- 工具卡新增「📤 同步」按钮，仅待同步时显示，同步中禁用并切换文案
- 顶部「📤 同步本地」按钮新增 IsBusy 守卫，与单条互斥
- 抽取 SyncSingleToolAsync 共享逻辑，避免双实现漂移
- ToolProject 增加 INPC 与 IsSyncing（不参与持久化）
- 验证: 桌面编译 0 错误

后端 (任务分配 PR1 - 数据层 + 骨架)
- 新增 task / notification_recipient / assignment_event / assignment_history 四张表
- H2 schema.sql + PG/MySQL init 脚本同步
- 新增 Task / TaskStatus(6态) / TaskTargetType / TaskRole 实体
- 新增 NotificationRecipient / AssignmentEvent / AssignmentHistory 实体
- 新增 Mapper + Service 接口 + Impl 骨架
- F1 修复: PG/MySQL 补全 sys_job / sys_job_log (H2 原有)
- F2 校验: 17 张现有表在 PG/MySQL 已含 create_by/update_by，无需 ALTER

后端 (F5 通知分发修复)
- NotificationServiceImpl.createAndDistribute 支持 receiverType='all'/'user'/'group'
- 'group' 解析 user_group → user_ids；'user' 用 receiverIds；'all' 查全表
- 批量写入 notification_recipient（unique 索引幂等）
- 新增端点:
  - GET  /api/notifications/mine         (当前用户收件箱, 含 isRead)
  - GET  /api/notifications/unread-count  (轮询用)
  - POST /api/notifications/{id}/read     (单条已读, 不属于自己 → 400)
  - POST /api/notifications/read-all      (全部已读)
- 端到端验证 H2: distributed=1, unread-count=1→0, markRead 幂等 ✓

F7 校验
- 桌面端 User.Id / Game.Id / Product.Id / ToolProject.Id / AdParam.Id 等
  均为 long，与后端 Java Long 对齐；审计报告 F7 已过时无需改动

文档
- docs/assignment-field-mapping.md 三端字段对照矩阵 + 6 态状态机 + PR2 接口占位